--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.4.2",
     "lucide": "^0.475.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
